style changes to save buttons

--- a/Develop/style.css
+++ b/Develop/style.css
@@ -50,7 +50,7 @@ textarea {
   border-left: 1px solid black;
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
-  background-color: #0c5262;
+  background-color: #446d5d;
   color: white;
 }
 
